--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <![endif]-->
         <div class="game-board">
 			<div class="board-inner">
-				test
+				<div class="hr-plates">test</div>
+				<div class="hr-plates">test</div>
 			</div>
         </div>
         <!-- jQuery library -->
