--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="game-board">
+			<div class="top">
+				<div class="top-left quadrant">
+				</div>
+				<div class="top-right quadrant">
+				</div>
+			</div>
+			<div class="bottom">
+				<div class="bottom-left quadrant">
+				</div>
+				<div class="bottom-right quadrant">
+				</div>
+			</div>
         </div>
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
