--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <![endif]-->
         <div class="game-board">
 			<div class="top">
-				<div class="top-left quadrant">
+				<div class="top-left quadrant green">
 				</div>
-				<div class="top-right quadrant">
+				<div class="top-right quadrant red">
 				</div>
 			</div>
 			<div class="bottom">
-				<div class="bottom-left quadrant">
+				<div class="bottom-left quadrant blue">
 				</div>
-				<div class="bottom-right quadrant">
+				<div class="bottom-right quadrant yellow">
 				</div>
 			</div>
         </div>
