--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 				<div class="bottom-right quadrant yellow">
 				</div>
 			</div>
+			<div class="switch-board">
+				test
+			</div>
         </div>
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
