--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<div class="switch-board">
-				test
+				<p>Simon</p> 
 			</div>
         </div>
         <!-- jQuery library -->
