minor refactor in design code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 				</div>
 			</div>
 			<div class="switch-board">
-				<p>Simon</p> 
+				<div class="switch-b-in">
+					<p>Simon</p>
+				</div> 
 			</div>
         </div>
         <!-- jQuery library -->
