include frame for counting digit screen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 			<div class="switch-board">
 				<div class="switch-b-in">
 					<p>Simon</p>
+					<div class="switch-rw">
+						<div class="count-block">
+							<div class="counting-block">
+							</div>
+						</div>
+					</div>
 				</div> 
 			</div>
         </div>
