--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						<div class="count-block">
 							<div class="counting-block">
 							</div>
+							<span>COUNT</span>
 						</div>
 					</div>
 				</div> 
