basic design for start button in the game

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 							</div>
 							<span>COUNT</span>
 						</div>
+						<div class="btn-block">
+							<div class="round-btn">
+							</div>
+							<span>START</span>
+						</div>
 					</div>
 				</div> 
 			</div>
