--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 							</div>
 							<span>START</span>
 						</div>
+						<div class="btn-block">
+							<div class="led">
+								
+							</div>
+							<div class="round-btn yellow">
+							</div>
+							<!-- <span class="strict">STRICT</span> -->
+						</div>
 					</div>
 				</div> 
 			</div>
