--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -55,7 +55,7 @@
 							</div>
 							<div class="round-btn yellow">
 							</div>
-							<!-- <span class="strict">STRICT</span> -->
+							<span class="strict">STRICT</span>
 						</div>
 					</div>
 				</div> 
