add registered mark

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="switch-board">
 				<div class="switch-b-in">
-					<p>Simon</p>
+					<p>Simon &reg</p>
 					<div class="switch-rw">
 						<div class="count-block">
 							<div class="counting-block">
