add switch slot

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 							<span class="strict">STRICT</span>
 						</div>
 					</div>
+					<div class="switch-rw">
+						<div class="label">OFF</div>
+						<div class="switch-slot label"></div>
+						<div class="label">ON</div>
+					</div>
 				</div> 
 			</div>
         </div>
