--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 					</div>
 					<div class="switch-rw">
 						<div class="label">OFF</div>
-						<div class="switch-slot label"></div>
+						<div class="switch-slot label">
+							<div class="switch"></div>
+						</div>
 						<div class="label">ON</div>
 					</div>
 				</div> 
