--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="switch-rw">
 						<div class="label">OFF</div>
 						<div class="switch-slot label">
-							<div class="switch"></div>
+							<div class="switch" id="power-switch"></div>
 						</div>
 						<div class="label">ON</div>
 					</div>
