turn count screen on and of with switch

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p>Simon &reg</p>
 					<div class="switch-rw">
 						<div class="count-block">
-							<div class="counting-block">
+							<div class="counting-block" id="counting">
 								- -
 							</div>
 							<span>COUNT</span>
