set first round button to red

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<span>COUNT</span>
 						</div>
 						<div class="btn-block">
-							<div class="round-btn">
+							<div class="round-btn red">
 							</div>
 							<span>START</span>
 						</div>
