set ID for strict button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="led">
 								
 							</div>
-							<div class="round-btn yellow">
+							<div class="round-btn yellow" id="strict">
 							</div>
 							<span class="strict">STRICT</span>
 						</div>
